# dev-hub

./: .gitignore  CLAUDE.md  Dockerfile  README.md  TEST_REPORT_PHASE2_20260416.md  eslint.config.js  fix_svg.py  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
__fixtures__/workspace/: dam-hopper.toml
deploy/: dam-hopper.service
docs/: CHANGELOG.md  PHASE-02-WEB-WORKSPACE-SWITCHER.md  PHASE-03-WELCOME-INTEGRATION-TESTING.md  README.md  api-reference.md  brainstorm-tunnel-exposer-2026-04-21.md  code-standards.md  codebase-summary.md  configuration-guide.md  frontend-components.md  phase-04-monaco-editor.md  project-overview-pdr.md  project-roadmap.md  research-damhopper-feature-gaps-2026.md  research-dev-hub-fs-write-upload-perf.md  system-architecture.md  tech-stack.md  user-guide-multi-server-profiles.md  ws-protocol-guide.md
docs/phase-01-buffer-offset-tracking/: COMPLETION-SUMMARY.md  implementation.md  index.md
docs/phase-01-server-auth-bypass/: COMPLETION-SUMMARY.md  implementation.md  index.md
docs/phase-05-persist-worker/: index.md
plans/20260415-terminal-enhancement/: phase-02-config-restart-policy.md  phase-05-ws-events-channel-split.md  plan.md  review-phase-05-20260417.md
plans/20260416-multi-server-auth/: CODE_REVIEW_PHASE1_20260416.md  CODE_REVIEW_PHASE3_20260416.md  phase-01-server-auth-bypass.md  phase-02-multi-server-frontend.md  phase-03-auth-integration.md  plan.md
plans/20260416-workspace-initialization/: phase-01-discovery-api.md  phase-02-setup-wizard.md  phase-03-integration.md  plan.md
plans/20260417-session-persistence/: phase-01-buffer-offset-tracking.md  phase-02-protocol-extension.md  phase-03-frontend-reconnect.md  phase-04-sqlite-schema.md  phase-05-persist-worker.md  phase-06-startup-restore.md  plan.md  review-phase-01-20260417.md  review-phase-05-20260417.md
plans/20260422-tunnel-exposer/: phase-01-backend-core.md  phase-02-api-surface.md  phase-03-web-ui.md  plan.md
plans/20260425-port-detection-tunnel-combined/: phase-00-git-cleanup.md  phase-01-backend-cleanup.md  phase-02-panel-design.md  phase-03-web-client.md  phase-04-layout-integration.md  phase-05-smoke-tests-docs.md  plan.md
plans/260405-1644-rust-server-refactor/: phase-01-rust-scaffold-config.md  phase-02-pty-session-management.md  phase-03-git-operations.md  phase-04-agent-store-commands.md  phase-05-rest-ws-api.md  phase-06-web-configurable-backend.md  phase-07-web-remove-electron.md  phase-08-integration-testing.md  phase-09-cleanup.md  phase-10-ci-cd.md  plan.md
plans/260407-1815-ide-file-explorer/: phase-01-server-fs-foundation.md  phase-04-monaco-edit-save.md  plan.md
plans/260411-2001-ide-font-search-linecount/: phase-01-backend-config-and-search.md  phase-02-frontend-settings-and-font.md  plan.md
plans/260411-git-diff-merge/: phase-01-backend-diff-api.md  phase-02-changed-files-ui.md  phase-03-diff-viewer.md  phase-04-merge-conflict-ui.md  plan.md
plans/260413-2033-rename-to-dam-hopper/: plan.md
plans/agent-store/: phase-01-core-types-schema-store.md  phase-02-scanner-distributor.md  phase-03-ipc-electron-handlers.md  phase-04-web-ui-agent-store-page.md  plan.md
plans/config-system-enhancement/: phase-01-schema-and-presets.md  phase-04-server-config-api.md  plan.md
plans/custom-commands-web/: phase-01-api-client-hooks.md  phase-02-commands-tab.md  phase-03-build-run-visibility.md  plan.md
plans/dashboard-active-terminals/: phase-01-dashboard-session-list.md  phase-02-deep-link-navigation.md  plan.md
plans/desktop-app-migration/: phase-01-electron-shell.md  plan.md
plans/dev-hub-bootstrap/: phase-03-core-git.md  phase-06-server-api.md  phase-07-web-dashboard.md  plan.md
plans/freestyle-terminal-profiles/: phase-02-electron-ipc.md  phase-03-web-ui.md  plan.md
plans/report/: 2026-04-15-feature-backlog.md  phase-03-failure-analysis-20260417.md  phase-03-test-report-20260417.md  research-dev-hub-fs-write-upload-perf.md
plans/reports/: docs-manager-260411-1203-git-diff-api.md  phase-260405-2144-rust-scaffold-config.md  phase-260406-0030-pty-session-management.md  phase-260406-0155-git-operations.md  phase-260406-0157-agent-store-commands.md  phase-260406-1436-web-configurable-backend.md
plans/sidebar-collapse-resize/: phase-01-collapsible-sidebar.md  phase-02-resizable-treeview.md  plan.md
plans/terminals-git-ssh-improvements/: plan.md  (+2 more)
scripts/: bench.sh  compare-servers.sh
server/: Cargo.toml
server/src/: error.rs  lib.rs  main.rs  state.rs
server/src/agent_store/: distributor.rs  importer.rs  memory.rs  mod.rs  scanner.rs  schema.rs  store.rs  tests.rs
server/src/api/: auth.rs  config.rs  error.rs  fs.rs  git.rs  git_diff.rs  mod.rs  port_forward.rs  router.rs  settings.rs  tests.rs  workspace.rs  ws.rs  ws_protocol.rs
server/src/commands/: mod.rs  presets.rs  registry.rs  tests.rs
server/src/config/: discovery.rs  finder.rs  global.rs  mod.rs  parser.rs  presets.rs  schema.rs  tests.rs
server/src/fs/: error.rs  mod.rs  ops.rs  sandbox.rs  watcher.rs
server/src/git/: bulk.rs  cli_fallback.rs  diff.rs  mod.rs  progress.rs  repository.rs  tests.rs  types.rs  worktree.rs
server/src/port_forward/: detector.rs  error.rs  manager.rs  mod.rs  session.rs
server/src/pty/: buffer.rs  event_sink.rs  manager.rs  mod.rs  session.rs  tests.rs
server/src/tunnel/: cloudflared.rs  driver.rs  error.rs  installer.rs  manager.rs  mod.rs  session.rs  tests.rs
server/src/utils/: fs.rs  mod.rs
server/tests/: auth_no_auth.rs  fs_mutate.rs  fs_sandbox.rs  fs_upload.rs  fs_write_streaming.rs  ws_fs_subscribe.rs
(+43 files in other folders)
