[package]
name = "dev-hub-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dev-hub-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Paths / platform
dirs = "5"

# Env file loading
dotenvy = "0.15"

# ID generation
uuid = { version = "1", features = ["v4"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities — tokio-stream added in Phase 05 (PTY/event streaming)

# Path utilities
pathdiff = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
