[package]
name = "dam-hopper-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dam-hopper-server"
path = "src/main.rs"

[features]
# Bundle libgit2 + openssl statically — used for portable release binaries in CI
vendored = ["git2/vendored-libgit2", "git2/vendored-openssl"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "json", "macros"] }
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Paths / platform
dirs = "5"

# Env file loading
dotenvy = "0.15"

# ID generation
uuid = { version = "1", features = ["v4"] }

# Constant-time comparison for auth tokens
subtle = "2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# PTY session management
portable-pty = "0.8"

# Async broadcast channel for PTY event fan-out
tokio-stream = { version = "0.1", features = ["sync"] }

# Path utilities
pathdiff = "0.2"

# FS module — binary detection, MIME guessing, Windows path normalization
infer = "0.15"
mime_guess = "2"
dunce = "1"

# File system watching with debounce
notify = "7"
notify-debouncer-full = "0.4"

# Git operations via libgit2
git2 = "0.19"

# SQLite for session persistence
rusqlite = { version = "0.31", features = ["bundled"] }

# Date/time formatting for git commit timestamps
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Handlebars templating for memory templates
handlebars = "6"

# Regex for URL validation in importer
regex = "1"

# once_cell for lazy statics (port regex bank)
once_cell = "1"

# .gitignore-aware directory walking for file content search
ignore = "0.4"

# YAML frontmatter parsing for agent store items
serde_yaml_ng = "0.9"

# Atomic file writes (production use in fs write protocol)
tempfile = "3"

# Tunnel exposer: HTTP client for cloudflared binary download
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }

[target.'cfg(unix)'.dependencies]
# SIGTERM for graceful child process shutdown
nix = { version = "0.29", features = ["signal", "process"] }

[target.'cfg(target_os = "linux")'.dependencies]
# /proc/net/tcp polling for port detection (Linux only)
procfs = { version = "0.17", default-features = false }

# Base64 encoding for WS binary content transfer
base64 = "0.22"

# Streaming body for download handler
tokio-util = { version = "0.7", features = ["io"] }
mongodb = "3.5.2"
bson = "3.1.0"
bcrypt = "0.19.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }

[dev-dependencies]
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
